refactor : return 값 추가 (#817)